基础库轻微修改。