@@ -24,35 +24,34 @@ import java.util.List;
 import java.util.Map;
 
 /**
- * @author Chris Nokleberg
- * @version $Id: CollectionUtils.java,v 1.7 2004/06/24 21:15:21 herbyderby Exp $
+ * @author Joey
  */
-final class Collections3 {
-    private Collections3() { }
+public final class CollectionsX {
+    private CollectionsX() { }
 
-    public static Map bucket(Collection c, Transformer t) {
-        Map buckets = new HashMap();
-        for (Iterator it = c.iterator(); it.hasNext();) {
-            Object value = (Object)it.next();
-            Object key = t.transform(value);
-            List bucket = (List)buckets.get(key);
+    public static <K,V> Map<K,List<V>> bucket(Collection<V> c, Transformer<V,K> t) {
+        Map<K,List<V>> buckets = new HashMap<>();
+        for (Iterator<V> it = c.iterator(); it.hasNext();) {
+            V value = it.next();
+            K key = t.transform(value);
+            List<V> bucket = (List<V>)buckets.get(key);
             if (bucket == null) {
-                buckets.put(key, bucket = new LinkedList());
+                buckets.put(key, bucket = new LinkedList<>());
             }
             bucket.add(value);
         }
         return buckets;
     }
 
-    public static void reverse(Map source, Map target) {
-        for (Iterator it = source.keySet().iterator(); it.hasNext();) {
-            Object key = it.next();
+    public static <K,V> void reverse(Map<K,V> source, Map<V,K> target) {
+        for (Iterator<K> it = source.keySet().iterator(); it.hasNext();) {
+            K key = it.next();
             target.put(source.get(key), key);
         }
     }
 
-    public static Collection filter(Collection c, Predicate p) {
-        Iterator it = c.iterator();
+    public static <E> Collection<E> filter(Collection<E> c, Predicate p) {
+        Iterator<E> it = c.iterator();
         while (it.hasNext()) {
             if (!p.evaluate(it.next())) {
                 it.remove();
@@ -61,19 +60,19 @@ final class Collections3 {
         return c;
     }
 
-    public static List transform(Collection c, Transformer t) {
-        List result = new ArrayList(c.size());
-        for (Iterator it = c.iterator(); it.hasNext();) {
+    public static <E,T> List<T> transform(Collection<E> c, Transformer<E,T> t) {
+        List<T> result = new ArrayList<>(c.size());
+        for (Iterator<E> it = c.iterator(); it.hasNext();) {
             result.add(t.transform(it.next()));
         }
         return result;
     }
 
-    public static Map getIndexMap(List list) {
-        Map indexes = new HashMap();
+    public static <V> Map<V,Integer> getIndexMap(List<V> list) {
+        Map<V,Integer> indexes = new HashMap<>();
         int index = 0;
-        for (Iterator it = list.iterator(); it.hasNext();) {
-            indexes.put(it.next(), new Integer(index++));
+        for (Iterator<V> it = list.iterator(); it.hasNext();) {
+            indexes.put(it.next(), Integer.valueOf(index++));
         }
         return indexes;
     }
